# WifiChannelOptimizer

./: .env.example  .gitignore  LICENSE  PROMPT.md  README.md  README.us.md  analyze_windows.py  main.py  pyproject.toml
wifi_optimizer/: analyzer.py  decision.py  monitor.py  optimizer.py
