[project]
name = "wifi-channel-optimizer"
version = "0.1.0"
description = "Automated Wi-Fi channel optimizer for Huawei HG8145X6 (Entel ISP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40",
    "python-dotenv>=1.0",
]

[project.scripts]
wifi-optimizer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
